; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_h2output.c_vlc_h2_frame_send.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_h2output.c_vlc_h2_frame_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_tls = type { i32 }
%struct.vlc_h2_frame = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vlc_tls*, %struct.vlc_h2_frame*)* @vlc_h2_frame_send to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_h2_frame_send(%struct.vlc_tls* %0, %struct.vlc_h2_frame* %1) #0 {
  %3 = alloca %struct.vlc_tls*, align 8
  %4 = alloca %struct.vlc_h2_frame*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.vlc_tls* %0, %struct.vlc_tls** %3, align 8
  store %struct.vlc_h2_frame* %1, %struct.vlc_h2_frame** %4, align 8
  %7 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %4, align 8
  %8 = call i64 @vlc_h2_frame_size(%struct.vlc_h2_frame* %7)
  store i64 %8, i64* %5, align 8
  %9 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %4, align 8
  %10 = call i32 @vlc_cleanup_push(i32 (%struct.vlc_h2_frame*)* @free, %struct.vlc_h2_frame* %9)
  %11 = load %struct.vlc_tls*, %struct.vlc_tls** %3, align 8
  %12 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %4, align 8
  %13 = getelementptr inbounds %struct.vlc_h2_frame, %struct.vlc_h2_frame* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i64, i64* %5, align 8
  %16 = call i64 @vlc_https_send(%struct.vlc_tls* %11, i32 %14, i64 %15)
  store i64 %16, i64* %6, align 8
  %17 = call i32 (...) @vlc_cleanup_pop()
  %18 = load %struct.vlc_h2_frame*, %struct.vlc_h2_frame** %4, align 8
  %19 = call i32 @free(%struct.vlc_h2_frame* %18)
  %20 = load i64, i64* %6, align 8
  %21 = load i64, i64* %5, align 8
  %22 = icmp eq i64 %20, %21
  %23 = zext i1 %22 to i64
  %24 = select i1 %22, i32 0, i32 -1
  ret i32 %24
}

declare dso_local i64 @vlc_h2_frame_size(%struct.vlc_h2_frame*) #1

declare dso_local i32 @vlc_cleanup_push(i32 (%struct.vlc_h2_frame*)*, %struct.vlc_h2_frame*) #1

declare dso_local i32 @free(%struct.vlc_h2_frame*) #1

declare dso_local i64 @vlc_https_send(%struct.vlc_tls*, i32, i64) #1

declare dso_local i32 @vlc_cleanup_pop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
